intel/bench_214/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main/log.txt
bench_214/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main.c:43:22: error: cannot initialize a variable of type 'const Summary16 *' (aka 'const TYPE_16__ *') with an rvalue of type 'void *'
    const Summary16 *summary = NULL;
                     ^         ~~~~
2 errors generated.
HLS FPGA Parse FAILED.
